TP4/obj/tp4.output
Terminals unused in grammar

   '^'


Rules useless in parser due to conflicts

   93 declaracionFunciones: TIPO_DATO IDENTIFICADOR '(' opcionArgumentosConTipo ')' ';'


Estado 21 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 91 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 154 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 162 conflictos: 23 reducción(ones)/reducción(ones)


Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input programa

    3 programa: expresion '\n'
    4         | sentencia '\n'
    5         | declaracion '\n'

    6 sentencia: sent_expresion
    7          | sent_compuesta
    8          | sent_seleccion
    9          | sent_iteracion
   10          | sent_deSalto

   11 sent_expresion: ';'
   12               | expresion ';'

   13 sent_compuesta: '{' listaDeDeclaracionesOpcional listaSentenciasOpcional '}'

   14 listaDeDeclaracionesOpcional: /* vacío */
   15                             | declaracion
   16                             | listaDeDeclaracionesOpcional declaracion

   17 listaSentencias: sentencia
   18                | listaSentencias sentencia

   19 listaSentenciasOpcional: /* vacío */
   20                        | sentencia
   21                        | listaSentencias sentencia

   22 sent_seleccion: IF '(' expresion ')' sentencia
   23               | IF '(' expresion ')' sentencia ELSE sentencia
   24               | SWITCH '(' expresion ')' sentencia
   25               | error ';'

   26 sent_iteracion: WHILE '(' expresion ')' sentencia
   27               | DO sentencia WHILE '(' expresion ')' ';'
   28               | FOR '(' expresion ';' expresion ';' expresion ')' sentencia

   29 sent_deSalto: RETURN expresionOpcional ';'

   30 expresionOpcional: /* vacío */
   31                  | expresion

   32 expresion: exp_asignacion
   33          | expresion ',' exp_asignacion

   34 exp_asignacion: exp_condicional
   35               | exp_unaria op_asignacion exp_asignacion

   36 exp_condicional: exp_o_logico
   37                | exp_o_logico '?' expresion ':' exp_condicional

   38 op_asignacion: '='
   39              | INCREMENTOASIGNACION
   40              | DECREMENTOASIGNACION

   41 exp_o_logico: exp_y_logico
   42             | exp_o_logico OR exp_y_logico

   43 exp_y_logico: exp_y
   44             | exp_y_logico AND exp_y

   45 exp_y: exp_igualdad
   46      | exp_y '&' exp_igualdad

   47 exp_igualdad: exp_relacional
   48             | exp_igualdad RELACIONALIGUAL exp_relacional
   49             | exp_igualdad RELACIONALDIFERENTE exp_relacional

   50 exp_relacional: exp_aditiva
   51               | exp_relacional '<' exp_aditiva
   52               | exp_relacional '>' exp_aditiva
   53               | exp_relacional MENORIGUAL exp_aditiva
   54               | exp_relacional MAYORIGUAL exp_aditiva

   55 exp_aditiva: exp_multiplicativa
   56            | exp_aditiva '+' exp_multiplicativa
   57            | exp_aditiva '-' exp_multiplicativa

   58 exp_multiplicativa: exp_unaria
   59                   | exp_multiplicativa '*' exp_unaria
   60                   | exp_multiplicativa '/' exp_unaria
   61                   | exp_multiplicativa '%' exp_unaria

   62 exp_unaria: exp_sufijo
   63           | INCREMENTO exp_unaria
   64           | DECREMENTO exp_unaria

   65 exp_sufijo: exp_primaria
   66           | exp_sufijo '[' expresion ']'
   67           | exp_sufijo '(' listaArgumentosOpcional ')'
   68           | exp_sufijo '.' IDENTIFICADOR
   69           | exp_sufijo ACCESOPUNTERO IDENTIFICADOR
   70           | exp_sufijo INCREMENTO
   71           | exp_sufijo DECREMENTO

   72 listaArgumentosOpcional: /* vacío */
   73                        | exp_asignacion
   74                        | listaDeDeclaracionesOpcional ',' exp_asignacion

   75 exp_primaria: IDENTIFICADOR
   76             | constante
   77             | LITERALCADENA
   78             | '(' expresion ')'

   79 declaracion: declaracionVariablesSimples
   80            | declaracionFunciones
   81            | definicionFunciones

   82 declaracionVariablesSimples: TIPO_DATO listaVariablesSimples ';'

   83 listaVariablesSimples: variableSimple
   84                      | listaVariablesSimples ',' variableSimple

   85 variableSimple: IDENTIFICADOR opcionInicializacion

   86 opcionInicializacion: /* vacío */
   87                     | op_asignacion constante

   88 constante: CONSTANTEDECIMAL
   89          | CONSTANTEHEXADECIMAL
   90          | CONSTANTEOCTAL
   91          | CONSTANTEREAL
   92          | CONSTANTECARACTER

   93 declaracionFunciones: TIPO_DATO IDENTIFICADOR '(' opcionArgumentosConTipo ')' ';'

   94 opcionArgumentosConTipo: /* vacío */
   95                        | TIPO_DATO opcionReferencia IDENTIFICADOR
   96                        | TIPO_DATO opcionReferencia IDENTIFICADOR ',' argumentosConTipo

   97 argumentosConTipo: TIPO_DATO opcionReferencia IDENTIFICADOR
   98                  | TIPO_DATO opcionReferencia IDENTIFICADOR ',' argumentosConTipo

   99 opcionReferencia: /* vacío */
  100                 | '&'

  101 definicionFunciones: TIPO_DATO IDENTIFICADOR '(' opcionArgumentosConTipo ')' sentencia


Terminales con las reglas donde aparecen

$end (0) 0
'\n' (10) 3 4 5
'%' (37) 61
'&' (38) 46 100
'(' (40) 22 23 24 26 27 28 67 78 93 101
')' (41) 22 23 24 26 27 28 67 78 93 101
'*' (42) 59
'+' (43) 56
',' (44) 33 74 84 96 98
'-' (45) 57
'.' (46) 68
'/' (47) 60
':' (58) 37
';' (59) 11 12 25 27 28 29 82 93
'<' (60) 51
'=' (61) 38
'>' (62) 52
'?' (63) 37
'[' (91) 66
']' (93) 66
'^' (94)
'{' (123) 13
'}' (125) 13
error (256) 25
IDENTIFICADOR (258) 68 69 75 85 93 95 96 97 98 101
TIPO_DATO (259) 82 93 95 96 97 98 101
INCREMENTO (260) 63 70
DECREMENTO (261) 64 71
INCREMENTOASIGNACION (262) 39
DECREMENTOASIGNACION (263) 40
AND (264) 44
OR (265) 42
RELACIONALIGUAL (266) 48
RELACIONALDIFERENTE (267) 49
MAYORIGUAL (268) 54
MENORIGUAL (269) 53
ACCESOPUNTERO (270) 69
CONSTANTEDECIMAL (271) 88
CONSTANTEOCTAL (272) 90
CONSTANTEHEXADECIMAL (273) 89
CONSTANTEREAL (274) 91
CONSTANTECARACTER (275) 92
LITERALCADENA (276) 77
IF (277) 22 23
ELSE (278) 23
WHILE (279) 26 27
DO (280) 27
SWITCH (281) 24
FOR (282) 28
RETURN (283) 29


No terminales con las reglas donde aparecen

$accept (51)
    en la izquierda: 0
input (52)
    en la izquierda: 1 2, en la derecha: 0 2
programa (53)
    en la izquierda: 3 4 5, en la derecha: 2
sentencia (54)
    en la izquierda: 6 7 8 9 10, en la derecha: 4 17 18 20 21 22 23
    24 26 27 28 101
sent_expresion (55)
    en la izquierda: 11 12, en la derecha: 6
sent_compuesta (56)
    en la izquierda: 13, en la derecha: 7
listaDeDeclaracionesOpcional (57)
    en la izquierda: 14 15 16, en la derecha: 13 16 74
listaSentencias (58)
    en la izquierda: 17 18, en la derecha: 18 21
listaSentenciasOpcional (59)
    en la izquierda: 19 20 21, en la derecha: 13
sent_seleccion (60)
    en la izquierda: 22 23 24 25, en la derecha: 8
sent_iteracion (61)
    en la izquierda: 26 27 28, en la derecha: 9
sent_deSalto (62)
    en la izquierda: 29, en la derecha: 10
expresionOpcional (63)
    en la izquierda: 30 31, en la derecha: 29
expresion (64)
    en la izquierda: 32 33, en la derecha: 3 12 22 23 24 26 27 28 31
    33 37 66 78
exp_asignacion (65)
    en la izquierda: 34 35, en la derecha: 32 33 35 73 74
exp_condicional (66)
    en la izquierda: 36 37, en la derecha: 34 37
op_asignacion (67)
    en la izquierda: 38 39 40, en la derecha: 35 87
exp_o_logico (68)
    en la izquierda: 41 42, en la derecha: 36 37 42
exp_y_logico (69)
    en la izquierda: 43 44, en la derecha: 41 42 44
exp_y (70)
    en la izquierda: 45 46, en la derecha: 43 44 46
exp_igualdad (71)
    en la izquierda: 47 48 49, en la derecha: 45 46 48 49
exp_relacional (72)
    en la izquierda: 50 51 52 53 54, en la derecha: 47 48 49 51 52
    53 54
exp_aditiva (73)
    en la izquierda: 55 56 57, en la derecha: 50 51 52 53 54 56 57
exp_multiplicativa (74)
    en la izquierda: 58 59 60 61, en la derecha: 55 56 57 59 60 61
exp_unaria (75)
    en la izquierda: 62 63 64, en la derecha: 35 58 59 60 61 63 64
exp_sufijo (76)
    en la izquierda: 65 66 67 68 69 70 71, en la derecha: 62 66 67
    68 69 70 71
listaArgumentosOpcional (77)
    en la izquierda: 72 73 74, en la derecha: 67
exp_primaria (78)
    en la izquierda: 75 76 77 78, en la derecha: 65
declaracion (79)
    en la izquierda: 79 80 81, en la derecha: 5 15 16
declaracionVariablesSimples (80)
    en la izquierda: 82, en la derecha: 79
listaVariablesSimples (81)
    en la izquierda: 83 84, en la derecha: 82 84
variableSimple (82)
    en la izquierda: 85, en la derecha: 83 84
opcionInicializacion (83)
    en la izquierda: 86 87, en la derecha: 85
constante (84)
    en la izquierda: 88 89 90 91 92, en la derecha: 76 87
declaracionFunciones (85)
    en la izquierda: 93, en la derecha: 80
opcionArgumentosConTipo (86)
    en la izquierda: 94 95 96, en la derecha: 93 101
argumentosConTipo (87)
    en la izquierda: 97 98, en la derecha: 96 98
opcionReferencia (88)
    en la izquierda: 99 100, en la derecha: 95 96 97 98
definicionFunciones (89)
    en la izquierda: 101, en la derecha: 81


estado 0

    0 $accept: . input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


estado 1

    0 $accept: input . $end
    2 input: input . programa

    $end                  desplazar e ir al estado 2
    error                 desplazar e ir al estado 3
    IDENTIFICADOR         desplazar e ir al estado 4
    TIPO_DATO             desplazar e ir al estado 5
    INCREMENTO            desplazar e ir al estado 6
    DECREMENTO            desplazar e ir al estado 7
    CONSTANTEDECIMAL      desplazar e ir al estado 8
    CONSTANTEOCTAL        desplazar e ir al estado 9
    CONSTANTEHEXADECIMAL  desplazar e ir al estado 10
    CONSTANTEREAL         desplazar e ir al estado 11
    CONSTANTECARACTER     desplazar e ir al estado 12
    LITERALCADENA         desplazar e ir al estado 13
    IF                    desplazar e ir al estado 14
    WHILE                 desplazar e ir al estado 15
    DO                    desplazar e ir al estado 16
    SWITCH                desplazar e ir al estado 17
    FOR                   desplazar e ir al estado 18
    RETURN                desplazar e ir al estado 19
    ';'                   desplazar e ir al estado 20
    '{'                   desplazar e ir al estado 21
    '('                   desplazar e ir al estado 22

    programa                     ir al estado 23
    sentencia                    ir al estado 24
    sent_expresion               ir al estado 25
    sent_compuesta               ir al estado 26
    sent_seleccion               ir al estado 27
    sent_iteracion               ir al estado 28
    sent_deSalto                 ir al estado 29
    expresion                    ir al estado 30
    exp_asignacion               ir al estado 31
    exp_condicional              ir al estado 32
    exp_o_logico                 ir al estado 33
    exp_y_logico                 ir al estado 34
    exp_y                        ir al estado 35
    exp_igualdad                 ir al estado 36
    exp_relacional               ir al estado 37
    exp_aditiva                  ir al estado 38
    exp_multiplicativa           ir al estado 39
    exp_unaria                   ir al estado 40
    exp_sufijo                   ir al estado 41
    exp_primaria                 ir al estado 42
    declaracion                  ir al estado 43
    declaracionVariablesSimples  ir al estado 44
    constante                    ir al estado 45
    declaracionFunciones         ir al estado 46
    definicionFunciones          ir al estado 47


estado 2

    0 $accept: input $end .

    $default  aceptar


estado 3

   25 sent_seleccion: error . ';'

    ';'  desplazar e ir al estado 48


estado 4

   75 exp_primaria: IDENTIFICADOR .

    $default  reduce usando la regla 75 (exp_primaria)


estado 5

   82 declaracionVariablesSimples: TIPO_DATO . listaVariablesSimples ';'
   93 declaracionFunciones: TIPO_DATO . IDENTIFICADOR '(' opcionArgumentosConTipo ')' ';'
  101 definicionFunciones: TIPO_DATO . IDENTIFICADOR '(' opcionArgumentosConTipo ')' sentencia

    IDENTIFICADOR  desplazar e ir al estado 49

    listaVariablesSimples  ir al estado 50
    variableSimple         ir al estado 51


estado 6

   63 exp_unaria: INCREMENTO . exp_unaria

    IDENTIFICADOR         desplazar e ir al estado 4
    INCREMENTO            desplazar e ir al estado 6
    DECREMENTO            desplazar e ir al estado 7
    CONSTANTEDECIMAL      desplazar e ir al estado 8
    CONSTANTEOCTAL        desplazar e ir al estado 9
    CONSTANTEHEXADECIMAL  desplazar e ir al estado 10
    CONSTANTEREAL         desplazar e ir al estado 11
    CONSTANTECARACTER     desplazar e ir al estado 12
    LITERALCADENA         desplazar e ir al estado 13
    '('                   desplazar e ir al estado 22

    exp_unaria    ir al estado 52
    exp_sufijo    ir al estado 41
    exp_primaria  ir al estado 42
    constante     ir al estado 45


estado 7

   64 exp_unaria: DECREMENTO . exp_unaria

    IDENTIFICADOR         desplazar e ir al estado 4
    INCREMENTO            desplazar e ir al estado 6
    DECREMENTO            desplazar e ir al estado 7
    CONSTANTEDECIMAL      desplazar e ir al estado 8
    CONSTANTEOCTAL        desplazar e ir al estado 9
    CONSTANTEHEXADECIMAL  desplazar e ir al estado 10
    CONSTANTEREAL         desplazar e ir al estado 11
    CONSTANTECARACTER     desplazar e ir al estado 12
    LITERALCADENA         desplazar e ir al estado 13
    '('                   desplazar e ir al estado 22

    exp_unaria    ir al estado 53
    exp_sufijo    ir al estado 41
    exp_primaria  ir al estado 42
    constante     ir al estado 45


estado 8

   88 constante: CONSTANTEDECIMAL .

    $default  reduce usando la regla 88 (constante)


estado 9

   90 constante: CONSTANTEOCTAL .

    $default  reduce usando la regla 90 (constante)


estado 10

   89 constante: CONSTANTEHEXADECIMAL .

    $default  reduce usando la regla 89 (constante)


estado 11

   91 constante: CONSTANTEREAL .

    $default  reduce usando la regla 91 (constante)


estado 12

   92 constante: CONSTANTECARACTER .

    $default  reduce usando la regla 92 (constante)


estado 13

   77 exp_primaria: LITERALCADENA .

    $default  reduce usando la regla 77 (exp_primaria)


estado 14

   22 sent_seleccion: IF . '(' expresion ')' sentencia
   23               | IF . '(' expresion ')' sentencia ELSE sentencia

    '('  desplazar e ir al estado 54


estado 15

   26 sent_iteracion: WHILE . '(' expresion ')' sentencia

    '('  desplazar e ir al estado 55


estado 16

   27 sent_iteracion: DO . sentencia WHILE '(' expresion ')' ';'

    error                 desplazar e ir al estado 3
    IDENTIFICADOR         desplazar e ir al estado 4
    INCREMENTO            desplazar e ir al estado 6
    DECREMENTO            desplazar e ir al estado 7
    CONSTANTEDECIMAL      desplazar e ir al estado 8
    CONSTANTEOCTAL        desplazar e ir al estado 9
    CONSTANTEHEXADECIMAL  desplazar e ir al estado 10
    CONSTANTEREAL         desplazar e ir al estado 11
    CONSTANTECARACTER     desplazar e ir al estado 12
    LITERALCADENA         desplazar e ir al estado 13
    IF                    desplazar e ir al estado 14
    WHILE                 desplazar e ir al estado 15
    DO                    desplazar e ir al estado 16
    SWITCH                desplazar e ir al estado 17
    FOR                   desplazar e ir al estado 18
    RETURN                desplazar e ir al estado 19
    ';'                   desplazar e ir al estado 20
    '{'                   desplazar e ir al estado 21
    '('                   desplazar e ir al estado 22

    sentencia           ir al estado 56
    sent_expresion      ir al estado 25
    sent_compuesta      ir al estado 26
    sent_seleccion      ir al estado 27
    sent_iteracion      ir al estado 28
    sent_deSalto        ir al estado 29
    expresion           ir al estado 57
    exp_asignacion      ir al estado 31
    exp_condicional     ir al estado 32
    exp_o_logico        ir al estado 33
    exp_y_logico        ir al estado 34
    exp_y               ir al estado 35
    exp_igualdad        ir al estado 36
    exp_relacional      ir al estado 37
    exp_aditiva         ir al estado 38
    exp_multiplicativa  ir al estado 39
    exp_unaria          ir al estado 40
    exp_sufijo          ir al estado 41
    exp_primaria        ir al estado 42
    constante           ir al estado 45


estado 17

   24 sent_seleccion: SWITCH . '(' expresion ')' sentencia

    '('  desplazar e ir al estado 58


estado 18

   28 sent_iteracion: FOR . '(' expresion ';' expresion ';' expresion ')' sentencia

    '('  desplazar e ir al estado 59


estado 19

   29 sent_deSalto: RETURN . expresionOpcional ';'

    IDENTIFICADOR         desplazar e ir al estado 4
    INCREMENTO            desplazar e ir al estado 6
    DECREMENTO            desplazar e ir al estado 7
    CONSTANTEDECIMAL      desplazar e ir al estado 8
    CONSTANTEOCTAL        desplazar e ir al estado 9
    CONSTANTEHEXADECIMAL  desplazar e ir al estado 10
    CONSTANTEREAL         desplazar e ir al estado 11
    CONSTANTECARACTER     desplazar e ir al estado 12
    LITERALCADENA         desplazar e ir al estado 13
    '('                   desplazar e ir al estado 22

    $default  reduce usando la regla 30 (expresionOpcional)

    expresionOpcional   ir al estado 60
    expresion           ir al estado 61
    exp_asignacion      ir al estado 31
    exp_condicional     ir al estado 32
    exp_o_logico        ir al estado 33
    exp_y_logico        ir al estado 34
    exp_y               ir al estado 35
    exp_igualdad        ir al estado 36
    exp_relacional      ir al estado 37
    exp_aditiva         ir al estado 38
    exp_multiplicativa  ir al estado 39
    exp_unaria          ir al estado 40
    exp_sufijo          ir al estado 41
    exp_primaria        ir al estado 42
    constante           ir al estado 45


estado 20

   11 sent_expresion: ';' .

    $default  reduce usando la regla 11 (sent_expresion)


estado 21

   13 sent_compuesta: '{' . listaDeDeclaracionesOpcional listaSentenciasOpcional '}'

    TIPO_DATO  desplazar e ir al estado 5

    TIPO_DATO  [reduce usando la regla 14 (listaDeDeclaracionesOpcional)]
    $default   reduce usando la regla 14 (listaDeDeclaracionesOpcional)

    listaDeDeclaracionesOpcional  ir al estado 62
    declaracion                   ir al estado 63
    declaracionVariablesSimples   ir al estado 44
    declaracionFunciones          ir al estado 46
    definicionFunciones           ir al estado 47


estado 22

   78 exp_primaria: '(' . expresion ')'

    IDENTIFICADOR         desplazar e ir al estado 4
    INCREMENTO            desplazar e ir al estado 6
    DECREMENTO            desplazar e ir al estado 7
    CONSTANTEDECIMAL      desplazar e ir al estado 8
    CONSTANTEOCTAL        desplazar e ir al estado 9
    CONSTANTEHEXADECIMAL  desplazar e ir al estado 10
    CONSTANTEREAL         desplazar e ir al estado 11
    CONSTANTECARACTER     desplazar e ir al estado 12
    LITERALCADENA         desplazar e ir al estado 13
    '('                   desplazar e ir al estado 22

    expresion           ir al estado 64
    exp_asignacion      ir al estado 31
    exp_condicional     ir al estado 32
    exp_o_logico        ir al estado 33
    exp_y_logico        ir al estado 34
    exp_y               ir al estado 35
    exp_igualdad        ir al estado 36
    exp_relacional      ir al estado 37
    exp_aditiva         ir al estado 38
    exp_multiplicativa  ir al estado 39
    exp_unaria          ir al estado 40
    exp_sufijo          ir al estado 41
    exp_primaria        ir al estado 42
    constante           ir al estado 45


estado 23

    2 input: input programa .

    $default  reduce usando la regla 2 (input)


estado 24

    4 programa: sentencia . '\n'

    '\n'  desplazar e ir al estado 65


estado 25

    6 sentencia: sent_expresion .

    $default  reduce usando la regla 6 (sentencia)


estado 26

    7 sentencia: sent_compuesta .

    $default  reduce usando la regla 7 (sentencia)


estado 27

    8 sentencia: sent_seleccion .

    $default  reduce usando la regla 8 (sentencia)


estado 28

    9 sentencia: sent_iteracion .

    $default  reduce usando la regla 9 (sentencia)


estado 29

   10 sentencia: sent_deSalto .

    $default  reduce usando la regla 10 (sentencia)


estado 30

    3 programa: expresion . '\n'
   12 sent_expresion: expresion . ';'
   33 expresion: expresion . ',' exp_asignacion

    '\n'  desplazar e ir al estado 66
    ';'   desplazar e ir al estado 67
    ','   desplazar e ir al estado 68


estado 31

   32 expresion: exp_asignacion .

    $default  reduce usando la regla 32 (expresion)


estado 32

   34 exp_asignacion: exp_condicional .

    $default  reduce usando la regla 34 (exp_asignacion)


estado 33

   36 exp_condicional: exp_o_logico .
   37                | exp_o_logico . '?' expresion ':' exp_condicional
   42 exp_o_logico: exp_o_logico . OR exp_y_logico

    OR   desplazar e ir al estado 69
    '?'  desplazar e ir al estado 70

    $default  reduce usando la regla 36 (exp_condicional)


estado 34

   41 exp_o_logico: exp_y_logico .
   44 exp_y_logico: exp_y_logico . AND exp_y

    AND  desplazar e ir al estado 71

    $default  reduce usando la regla 41 (exp_o_logico)


estado 35

   43 exp_y_logico: exp_y .
   46 exp_y: exp_y . '&' exp_igualdad

    '&'  desplazar e ir al estado 72

    $default  reduce usando la regla 43 (exp_y_logico)


estado 36

   45 exp_y: exp_igualdad .
   48 exp_igualdad: exp_igualdad . RELACIONALIGUAL exp_relacional
   49             | exp_igualdad . RELACIONALDIFERENTE exp_relacional

    RELACIONALIGUAL      desplazar e ir al estado 73
    RELACIONALDIFERENTE  desplazar e ir al estado 74

    $default  reduce usando la regla 45 (exp_y)


estado 37

   47 exp_igualdad: exp_relacional .
   51 exp_relacional: exp_relacional . '<' exp_aditiva
   52               | exp_relacional . '>' exp_aditiva
   53               | exp_relacional . MENORIGUAL exp_aditiva
   54               | exp_relacional . MAYORIGUAL exp_aditiva

    MAYORIGUAL  desplazar e ir al estado 75
    MENORIGUAL  desplazar e ir al estado 76
    '<'         desplazar e ir al estado 77
    '>'         desplazar e ir al estado 78

    $default  reduce usando la regla 47 (exp_igualdad)


estado 38

   50 exp_relacional: exp_aditiva .
   56 exp_aditiva: exp_aditiva . '+' exp_multiplicativa
   57            | exp_aditiva . '-' exp_multiplicativa

    '+'  desplazar e ir al estado 79
    '-'  desplazar e ir al estado 80

    $default  reduce usando la regla 50 (exp_relacional)


estado 39

   55 exp_aditiva: exp_multiplicativa .
   59 exp_multiplicativa: exp_multiplicativa . '*' exp_unaria
   60                   | exp_multiplicativa . '/' exp_unaria
   61                   | exp_multiplicativa . '%' exp_unaria

    '*'  desplazar e ir al estado 81
    '/'  desplazar e ir al estado 82
    '%'  desplazar e ir al estado 83

    $default  reduce usando la regla 55 (exp_aditiva)


estado 40

   35 exp_asignacion: exp_unaria . op_asignacion exp_asignacion
   58 exp_multiplicativa: exp_unaria .

    INCREMENTOASIGNACION  desplazar e ir al estado 84
    DECREMENTOASIGNACION  desplazar e ir al estado 85
    '='                   desplazar e ir al estado 86

    $default  reduce usando la regla 58 (exp_multiplicativa)

    op_asignacion  ir al estado 87


estado 41

   62 exp_unaria: exp_sufijo .
   66 exp_sufijo: exp_sufijo . '[' expresion ']'
   67           | exp_sufijo . '(' listaArgumentosOpcional ')'
   68           | exp_sufijo . '.' IDENTIFICADOR
   69           | exp_sufijo . ACCESOPUNTERO IDENTIFICADOR
   70           | exp_sufijo . INCREMENTO
   71           | exp_sufijo . DECREMENTO

    INCREMENTO     desplazar e ir al estado 88
    DECREMENTO     desplazar e ir al estado 89
    ACCESOPUNTERO  desplazar e ir al estado 90
    '('            desplazar e ir al estado 91
    '['            desplazar e ir al estado 92
    '.'            desplazar e ir al estado 93

    $default  reduce usando la regla 62 (exp_unaria)


estado 42

   65 exp_sufijo: exp_primaria .

    $default  reduce usando la regla 65 (exp_sufijo)


estado 43

    5 programa: declaracion . '\n'

    '\n'  desplazar e ir al estado 94


estado 44

   79 declaracion: declaracionVariablesSimples .

    $default  reduce usando la regla 79 (declaracion)


estado 45

   76 exp_primaria: constante .

    $default  reduce usando la regla 76 (exp_primaria)


estado 46

   80 declaracion: declaracionFunciones .

    $default  reduce usando la regla 80 (declaracion)


estado 47

   81 declaracion: definicionFunciones .

    $default  reduce usando la regla 81 (declaracion)


estado 48

   25 sent_seleccion: error ';' .

    $default  reduce usando la regla 25 (sent_seleccion)


estado 49

   85 variableSimple: IDENTIFICADOR . opcionInicializacion
   93 declaracionFunciones: TIPO_DATO IDENTIFICADOR . '(' opcionArgumentosConTipo ')' ';'
  101 definicionFunciones: TIPO_DATO IDENTIFICADOR . '(' opcionArgumentosConTipo ')' sentencia

    INCREMENTOASIGNACION  desplazar e ir al estado 84
    DECREMENTOASIGNACION  desplazar e ir al estado 85
    '='                   desplazar e ir al estado 86
    '('                   desplazar e ir al estado 95

    $default  reduce usando la regla 86 (opcionInicializacion)

    op_asignacion         ir al estado 96
    opcionInicializacion  ir al estado 97


estado 50

   82 declaracionVariablesSimples: TIPO_DATO listaVariablesSimples . ';'
   84 listaVariablesSimples: listaVariablesSimples . ',' variableSimple

    ';'  desplazar e ir al estado 98
    ','  desplazar e ir al estado 99


estado 51

   83 listaVariablesSimples: variableSimple .

    $default  reduce usando la regla 83 (listaVariablesSimples)


estado 52

   63 exp_unaria: INCREMENTO exp_unaria .

    $default  reduce usando la regla 63 (exp_unaria)


estado 53

   64 exp_unaria: DECREMENTO exp_unaria .

    $default  reduce usando la regla 64 (exp_unaria)


estado 54

   22 sent_seleccion: IF '(' . expresion ')' sentencia
   23               | IF '(' . expresion ')' sentencia ELSE sentencia

    IDENTIFICADOR         desplazar e ir al estado 4
    INCREMENTO            desplazar e ir al estado 6
    DECREMENTO            desplazar e ir al estado 7
    CONSTANTEDECIMAL      desplazar e ir al estado 8
    CONSTANTEOCTAL        desplazar e ir al estado 9
    CONSTANTEHEXADECIMAL  desplazar e ir al estado 10
    CONSTANTEREAL         desplazar e ir al estado 11
    CONSTANTECARACTER     desplazar e ir al estado 12
    LITERALCADENA         desplazar e ir al estado 13
    '('                   desplazar e ir al estado 22

    expresion           ir al estado 100
    exp_asignacion      ir al estado 31
    exp_condicional     ir al estado 32
    exp_o_logico        ir al estado 33
    exp_y_logico        ir al estado 34
    exp_y               ir al estado 35
    exp_igualdad        ir al estado 36
    exp_relacional      ir al estado 37
    exp_aditiva         ir al estado 38
    exp_multiplicativa  ir al estado 39
    exp_unaria          ir al estado 40
    exp_sufijo          ir al estado 41
    exp_primaria        ir al estado 42
    constante           ir al estado 45


estado 55

   26 sent_iteracion: WHILE '(' . expresion ')' sentencia

    IDENTIFICADOR         desplazar e ir al estado 4
    INCREMENTO            desplazar e ir al estado 6
    DECREMENTO            desplazar e ir al estado 7
    CONSTANTEDECIMAL      desplazar e ir al estado 8
    CONSTANTEOCTAL        desplazar e ir al estado 9
    CONSTANTEHEXADECIMAL  desplazar e ir al estado 10
    CONSTANTEREAL         desplazar e ir al estado 11
    CONSTANTECARACTER     desplazar e ir al estado 12
    LITERALCADENA         desplazar e ir al estado 13
    '('                   desplazar e ir al estado 22

    expresion           ir al estado 101
    exp_asignacion      ir al estado 31
    exp_condicional     ir al estado 32
    exp_o_logico        ir al estado 33
    exp_y_logico        ir al estado 34
    exp_y               ir al estado 35
    exp_igualdad        ir al estado 36
    exp_relacional      ir al estado 37
    exp_aditiva         ir al estado 38
    exp_multiplicativa  ir al estado 39
    exp_unaria          ir al estado 40
    exp_sufijo          ir al estado 41
    exp_primaria        ir al estado 42
    constante           ir al estado 45


estado 56

   27 sent_iteracion: DO sentencia . WHILE '(' expresion ')' ';'

    WHILE  desplazar e ir al estado 102


estado 57

   12 sent_expresion: expresion . ';'
   33 expresion: expresion . ',' exp_asignacion

    ';'  desplazar e ir al estado 67
    ','  desplazar e ir al estado 68


estado 58

   24 sent_seleccion: SWITCH '(' . expresion ')' sentencia

    IDENTIFICADOR         desplazar e ir al estado 4
    INCREMENTO            desplazar e ir al estado 6
    DECREMENTO            desplazar e ir al estado 7
    CONSTANTEDECIMAL      desplazar e ir al estado 8
    CONSTANTEOCTAL        desplazar e ir al estado 9
    CONSTANTEHEXADECIMAL  desplazar e ir al estado 10
    CONSTANTEREAL         desplazar e ir al estado 11
    CONSTANTECARACTER     desplazar e ir al estado 12
    LITERALCADENA         desplazar e ir al estado 13
    '('                   desplazar e ir al estado 22

    expresion           ir al estado 103
    exp_asignacion      ir al estado 31
    exp_condicional     ir al estado 32
    exp_o_logico        ir al estado 33
    exp_y_logico        ir al estado 34
    exp_y               ir al estado 35
    exp_igualdad        ir al estado 36
    exp_relacional      ir al estado 37
    exp_aditiva         ir al estado 38
    exp_multiplicativa  ir al estado 39
    exp_unaria          ir al estado 40
    exp_sufijo          ir al estado 41
    exp_primaria        ir al estado 42
    constante           ir al estado 45


estado 59

   28 sent_iteracion: FOR '(' . expresion ';' expresion ';' expresion ')' sentencia

    IDENTIFICADOR         desplazar e ir al estado 4
    INCREMENTO            desplazar e ir al estado 6
    DECREMENTO            desplazar e ir al estado 7
    CONSTANTEDECIMAL      desplazar e ir al estado 8
    CONSTANTEOCTAL        desplazar e ir al estado 9
    CONSTANTEHEXADECIMAL  desplazar e ir al estado 10
    CONSTANTEREAL         desplazar e ir al estado 11
    CONSTANTECARACTER     desplazar e ir al estado 12
    LITERALCADENA         desplazar e ir al estado 13
    '('                   desplazar e ir al estado 22

    expresion           ir al estado 104
    exp_asignacion      ir al estado 31
    exp_condicional     ir al estado 32
    exp_o_logico        ir al estado 33
    exp_y_logico        ir al estado 34
    exp_y               ir al estado 35
    exp_igualdad        ir al estado 36
    exp_relacional      ir al estado 37
    exp_aditiva         ir al estado 38
    exp_multiplicativa  ir al estado 39
    exp_unaria          ir al estado 40
    exp_sufijo          ir al estado 41
    exp_primaria        ir al estado 42
    constante           ir al estado 45


estado 60

   29 sent_deSalto: RETURN expresionOpcional . ';'

    ';'  desplazar e ir al estado 105


estado 61

   31 expresionOpcional: expresion .
   33 expresion: expresion . ',' exp_asignacion

    ','  desplazar e ir al estado 68

    $default  reduce usando la regla 31 (expresionOpcional)


estado 62

   13 sent_compuesta: '{' listaDeDeclaracionesOpcional . listaSentenciasOpcional '}'
   16 listaDeDeclaracionesOpcional: listaDeDeclaracionesOpcional . declaracion
